--- a/htclient/Makefile
+++ b/htclient/Makefile
@@ -4,8 +4,8 @@ LDFLAGS = -lpthread
 
 all: test_htclient
 
-test_htclient: test_htclient.o htclient.o
-	$(CC) $(CFLAGS) -o test_htclient test_htclient.o htclient.o $(LDFLAGS)
+test_htclient: test_htclient.o htclient.o url_parser.o
+	$(CC) $(CFLAGS) -o test_htclient test_htclient.o htclient.o url_parser.o $(LDFLAGS)
 
 clean:
 	rm -f test_htclient *.o
